src/test/data/tests/const/valid/const.c
const int a = 10 + 20;
const int b = a + 5;

int main(void) {
    int c = 10;
    const int d = c + 2;

    return a + b + c + d;
}
