src/test/data/tests/const/invalid/assign_to_const_global.c
const int a = 10;

int main(void) {
    a = 20;
    return 0;
}
